[gd_scene load_steps=2 format=3 uid="uid://dtlh3duyp27av"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_47swa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_47swa")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0980392, 0.156863, 1)

[node name="TitleLabel" type="Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -248.0
offset_top = 85.0
offset_right = 248.0
offset_bottom = 177.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "X² PROJECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -278.0
offset_top = 177.0
offset_right = 278.0
offset_bottom = 213.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "交叉进化研究"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -11.0
offset_right = 121.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "新游戏"

[node name="ContinueButton" type="Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "继续游戏"

[node name="SettingsButton" type="Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "设置"

[node name="QuitButton" type="Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "退出"

[node name="Version" type="Label"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -26.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Version 0.1"
horizontal_alignment = 2 